<resources>
    <string name="app_name">Wallet Wise</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>

    <string-array name="role_options">
        <item>Student</item>
        <item>Working Professional</item>
    </string-array>
</resources>